# modern-software-dev-assignments

./: pyproject.toml
week1/: chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: README.md  list_notes_button.plan.md  pytest.ini  writeup.md
week2/app/: db.py  main.py  refactor.plan.md  schemas.py
week2/app/routers/: action_items.py  notes.py
week2/app/services/: extract.py  llm_action_items_extraction.plan.md
week2/frontend/: index.html
week2/tests/: test_extract.py  test_extract_llm.plan.md
week4/: .coverage  CLAUDE.md  SEARCH_PLAN.md
week4/.claude/commands/: test-runner.md
week4/backend/app/routers/: notes.py
week4/backend/tests/: test_notes.py
week4/frontend/: app.js  index.html
week6/backend/app/routers/: notes.py
week7/: CLAUDE.md
week7/backend/app/: schemas.py  utils.py
week7/backend/app/routers/: action_items.py  notes.py
week7/backend/tests/: test_action_items.py  test_notes.py
